#488 fixed z-index of overlay

--- a/src/components/_base-template/kix-header/style.less
+++ b/src/components/_base-template/kix-header/style.less
@@ -8,7 +8,7 @@
         box-sizing: border-box;
         position: fixed;
         top: 0;
-        z-index: 50;
+        z-index: 100;
         a,
         a:visited,
         a:hover,
